# fastapi-actix-web

./: Cargo.toml  README.md
fastapi-item/: main.py  pyproject.toml
src/: main.rs
